# godot-modern-titlebar

./: .gitignore  .gitmodules  LICENSE  README.md  project.godot
addons/moderntitlebar/: ModernTitlebarPlugin.cs  WindowCloser.cs  WindowFrameRemover.cs  WindowStyler.cs  modern_titlebar.scn  moderntitlebar.gdextension  plugin.cfg  window_buttons.scn
cpp/: CMakeLists.txt
cpp/src/: moderntitlebar.cpp  moderntitlebar.hpp  register_types.cpp  register_types.h  window_closer.cpp  window_closer.hpp  window_context_menu.cpp  window_context_menu.hpp  window_frame_remover.cpp  window_frame_remover.hpp  window_styler.cpp  window_styler.hpp
